# Alphas-UI-Pack-with-examples

./: CMakeLists.txt  changelog.md  mod.json
include/: CursorManager.hpp
include/nodes/: TouchBlocker.hpp
include/nodes/scroll/: AdvancedScrollLayer.hpp  ScrollContent.hpp
include/nodes/scroll/elements/: WindowsClassicArrow.hpp  WindowsClassicHandle.hpp
src/: CursorManager.cpp  CursorManager.mm
src/examples/: ScrollTestLayer.hpp
src/nodes/: TouchBlocker.cpp
src/nodes/scroll/: AdvancedScrollBar.cpp  AdvancedScrollLayer.cpp  ScrollContent.cpp
src/nodes/scroll/elements/: RoundedScrollHandle.cpp  RoundedScrollTrack.cpp  WindowsClassicArrow.cpp  WindowsClassicHandle.cpp
src/touch/: TouchDispatcher.cpp
